--- a/css/timeline.css
+++ b/css/timeline.css
@@ -30,10 +30,11 @@
   height: 80vh;
   background: var(--main-bg);
   text-align: center;
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
 #popupcontent img {
   max-width: none;
-  height: 80vh;
+  height: calc(80vh - 4px);
 }
 
 @media (max-width: 700px) {
@@ -50,6 +51,63 @@
   #popupcontent img {
     height: 60vh;
   }
+}
+
+/* Slideshow container */
+#popupcontent > .slideshow-container {
+  background: var(--noir-cds);
+}
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+.slides {
+  display: none;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.numbertext {
+  color: var(--main-bg);
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 5px;
+  background: rgba(0,0,0,.7);
+  left: 5px;
+  border-radius: 5px;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* timeline */
