--- a/css/timeline.css
+++ b/css/timeline.css
@@ -58,34 +58,35 @@
   background: var(--noir-cds);
 }
 .slideshow-container {
-  max-width: 1000px;
   position: relative;
   margin: auto;
 }
 .slides {
   display: none;
+  overflow: scroll;
 }
 .prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
+  width: 50px;
+  height: 50px;
+  line-height: 10px;
   margin-top: -22px;
-  padding: 16px;
+  padding: 20px;
   color: white;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 50px;
+  background-color: rgba(0,0,0,0.3);
   user-select: none;
 }
 .prev {
-  left: 0;
-  border-radius: 3px 0 0 3px;
+  left: 2px;
 }
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+  right: 2px;
 }
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
