--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,20 @@ img {
   }
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 25px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 /* footer */
 footer {
   width: 100vw;
