--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ body {
 }
 #main {
   min-height: calc(100vh - 233px);
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 #noscript {
@@ -60,11 +60,6 @@ body {
 img {
   max-width: 100%;
 }
-@media (max-width: 1100px) {
-  #main {
-    width: 90%;
-  }
-}
 
 ::-webkit-scrollbar {
   width: 5px;
@@ -78,6 +73,92 @@ img {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
+}
+
+.pdf {
+  width: 70%;
+  aspect-ratio: 4 / 3;
+}
+.note {
+  color: var(--noir-cds);
+  font-style: italic;
+  opacity: .6;
+  font-size: .7em;
+}
+
+@media (max-width: 1100px) {
+  #main {
+    width: 80%;
+  }
+  .pdf {
+    width: 80%;
+  }
+}
+@media (max-width: 800px) {
+  #main {
+    width: 80%;
+  }
+  .pdf {
+    width: 100%;
+  }
+}
+
+/* popup */
+#popup {
+  display: none;
+}
+#popupbackground {
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--noir-cds);
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0.6;
+}
+#popupclose {
+  color: white;
+  top: calc(10vh - 60px);
+  right: calc(5vw - 30px);
+  position: fixed;
+  padding: 30px;
+  cursor: pointer;
+}
+#popupcontent {
+  z-index: 101;
+  position: fixed;
+  top: 10vh;
+  left: 5vw;
+  width: 90vw;
+  height: 80vh;
+  background: var(--main-bg);
+  text-align: center;
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+}
+#popupcontent img {
+  max-width: none;
+  height: calc(80vh - 4px);
+}
+#popupcontent #customhtml {
+  padding: 10px;
+}
+
+@media (max-width: 700px) {
+  #popupcontent {
+   width: 96vw;
+   left: 2vw;
+   height: 60vh;
+   top: 20vh;
+   overflow: scroll;
+  }
+  #popupclose {
+    top: calc(20vh - 60px);
+    right: calc(2vw - 30px);
+  }
+  #popupcontent img {
+    height: 60vh;
+  }
 }
 
 /* footer */
