--- a/css/univers.css
+++ b/css/univers.css
@@ -14,6 +14,7 @@
   text-transform: capitalize;
   cursor: pointer;
   line-height: 1.8em;
+  font-size: 18px;
 }
 
 #popupcontent {
@@ -25,6 +26,7 @@
 #popupcontent .description {
   font-style: italic;
   line-height: 1.5em;
+  font-size: 18px;
 }
 #popupcontent h3 {
   color: var(--bleu-cds);
