--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,7 @@ input:checked + .slider:before {
   width: 300px;
   height: 300px;
   background-size: 100%;
+  background-repeat: no-repeat;
   filter: brightness(1) grayscale(0) opacity(1);
   border-radius: 5px 5px 0 0;
   transition: all .5s;
