--- a/css/equipe.css
+++ b/css/equipe.css
@@ -17,6 +17,7 @@
   height: 375px;
   position: relative;
   cursor: pointer;
+  flex: 33%;
 }
 
 #orgas .orga:hover .presentation {
@@ -61,6 +62,7 @@
 #popupcontent {
   text-align: left;
   max-height: calc(80vh - 4px);
+  overflow: scroll;
 }
 #popupcontent h1 {
   color: var(--bleu-cds);
